Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-11557

Memory leak in BlockingRowBatchQueue

    XMLWordPrintableJSON

Details

    Description

      Reproduce SQL: select count from tpch_pqrquet.lineitem;

      40 Concurrent running reproduces memory leaks faster.

      Code location of memory leak: https://github.com/apache/impala/blob/17ec3a85c7e3733dacb08a9fcca83fff5ec75102/be/src/runtime/blocking-row-batch-queue.cc#L31

      Attachments

        Activity

          People

            xqhe Xianqing He
            xqhe Xianqing He
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: