IMPALA-11557: Fix memory leak in BlockingRowBatchQueue

'batch_queue_' is a pointer to store the RowBatches. It's
initialized in the constructor but not deleted in the destructor.

The way to fix in the patch is to use std::unique_ptr.

Change-Id: I656316b6575ce74a03b83fcd45e772c763835d56
Reviewed-on: http://gerrit.cloudera.org:8080/18960
Reviewed-by: Impala Public Jenkins <impala-public-jenkins@cloudera.com>
Tested-by: Quanlong Huang <huangquanlong@gmail.com>